--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home Developer || Inbio - Personal Portfolio Bootstrap Template</title>
+    <title>My Portfolio</title>
     <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="InBio is a one-page responsive personal portfolio layout which can be utilized to demonstrate your inventiveness. It’s an ideal decision for a developer, engineer, specialist, designer, content writer, Instructor, Photographer, Freelancer, Politician, Software engineer, Teacher or some other expert who needs to speak to his abilities and inventive work. InBio is well documented, very easy to use, Easily Customized, loads faster and provides better performance.">
+    <meta name="description" content="I am Junaid Nizam Quadri, a Darkweb Geek">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
@@ -145,23 +145,25 @@
                                                     <i data-feather="user"></i>
                                                 </div>
                                                 <h2 class="title">
-                                                    Hi, I’m <span>InBio</span>
+                                                    Hi, I’m <span>Junaid Quadri</span>
+                                                    <h4>Aka yottajunaid
+                                                    </h4>
                                                 </h2>
-                                                <p class="disc">Web designer and developer working for envato.com in Paris, France.
+                                                <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
                                                 </p>
                                             </div>
                                             <div class="user-info-footer">
                                                 <div class="info">
                                                     <i data-feather="file"></i>
-                                                    <span>Web designer & developer</span>
+                                                    <span>Cybersecurity Specialist</span>
                                                 </div>
                                                 <div class="info">
                                                     <i data-feather="mail"></i>
-                                                    <span>john.slady@gmail.com</span>
+                                                    <span>quadrijunaid369258@gmail.com</span>
                                                 </div>
                                                 <div class="info">
                                                     <i data-feather="map-pin"></i>
-                                                    <span>Paris fan</span>
+                                                    <span>Nashik, India</span>
                                                 </div>
                                             </div>
                                         </div>
