--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                                 </div>
                                                 <h2 class="title">
                                                     Hi, I’m <span>Junaid Quadri</span>
-                                                    <h4>Aka yottajunaid
+                                                    <h4 class="disc">Aka yottajunaid
                                                     </h4>
                                                 </h2>
                                                 <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
@@ -203,7 +203,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true" class="section-title text-center">
-                            <span class="subtitle">Over 10 years of experience</span>
                             <h2 class="title">My Experience</h2>
                         </div>
                     </div>
@@ -218,69 +217,19 @@
                                     <img src="assets/images/portfolio/portfolio-01.jpg" alt="Personal Portfolio">
                                 </div>
                                 <div class="experience-center">
-                                    <span class="date">2015-Present</span>
+                                    <span class="date">2025 <!--#Present --></span>
                                     <h4 class="experience-title">
-                                        Rainbow - Themes.
+                                        SECT
                                     </h4>
                                     <h6 class="subtitle">
-                                        Co-Founder, Web Designer & Developer
+                                        Cybersecurity Engineer (Intern)
                                     </h6>
-                                    <p class="disc">Reinvetning the way you create websites</p>
+                                    <p class="disc">Performed Reconnaissance, Vulnerability Assessment, Data Breach Analysis and OWASP Mapping</p>
                                 </div>
                             </div>
                             <div class="experience-right">
                                 <div class="experience-footer">
-                                    <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- single skills -->
-
-                        <!-- single skills -->
-                        <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="200" data-aos-once="true" class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
-                                    <img src="assets/images/portfolio/portfolio-02.jpg" alt="Personal Portfolio">
-                                </div>
-                                <div class="experience-center">
-                                    <span class="date">2015-Present</span>
-                                    <h4 class="experience-title">
-                                        App Development.
-                                    </h4>
-                                    <h6 class="subtitle">
-                                        Co-Founder, Web Designer & Developer
-                                    </h6>
-                                    <p class="disc">Reinvetning the way you create websites</p>
-                                </div>
-                            </div>
-                            <div class="experience-right">
-                                <div class="experience-footer">
-                                    <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- single skills -->
-
-                        <!-- single skills -->
-                        <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="300" data-aos-once="true" class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
-                                    <img src="assets/images/portfolio/portfolio-03.jpg" alt="Personal Portfolio">
-                                </div>
-                                <div class="experience-center">
-                                    <span class="date">2015-Present</span>
-                                    <h4 class="experience-title">
-                                        Application Management.
-                                    </h4>
-                                    <h6 class="subtitle">
-                                        Co-Founder, Web Designer & Developer
-                                    </h6>
-                                    <p class="disc">Reinvetning the way you create websites</p>
-                                </div>
-                            </div>
-                            <div class="experience-right">
-                                <div class="experience-footer">
-                                    <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
+                                    <a class="rn-btn" href="https://yottajunaid.github.io/SECT_Internship_Project/"><span>Report</span></a>
                                 </div>
                             </div>
                         </div>
@@ -298,7 +247,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true" class="section-title text-center">
-                            <span class="subtitle">Phd, Master and Bachelo</span>
+                            <span class="subtitle">Bachelor</span>
                             <h2 class="title">Education</h2>
                         </div>
                     </div>
@@ -312,48 +261,24 @@
                                     <img src="assets/images/portfolio/portfolio-04.jpg" alt="Personal Portfolio">
                                 </div>
                                 <div class="experience-center">
-                                    <span class="date">2015-Present</span>
+                                    <span class="date">2025-Present</span>
                                     <h4 class="experience-title">
-                                        Software Develop.
+                                        B.Tech CSE in Cloud Technology & Information Security
                                     </h4>
                                     <h6 class="subtitle">
-                                        Co-Founder, Web Designer & Developer
+                                        Sandip University
                                     </h6>
-                                    <p class="disc">Reinvetning the way you create websites</p>
+                                    <p class="disc">Pursuing</p>
                                 </div>
                             </div>
                             <div class="experience-right">
                                 <div class="experience-footer">
-                                    <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
+                                    <a class="rn-btn" href="https://www.sandipuniversity.edu.in/"><span>website</span></a>
                                 </div>
                             </div>
                         </div>
                         <!-- single skills -->
 
-                        <!-- single skills -->
-                        <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="200" data-aos-once="true" class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
-                                    <img src="assets/images/portfolio/portfolio-05.jpg" alt="Personal Portfolio">
-                                </div>
-                                <div class="experience-center">
-                                    <span class="date">2015-Present</span>
-                                    <h4 class="experience-title">
-                                        Web Design.
-                                    </h4>
-                                    <h6 class="subtitle">
-                                        Co-Founder, Web Designer & Developer
-                                    </h6>
-                                    <p class="disc">Reinvetning the way you create websites</p>
-                                </div>
-                            </div>
-                            <div class="experience-right">
-                                <div class="experience-footer">
-                                    <a class="rn-btn" href="#contacts"><span>CONTACT ME</span></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- single skills -->
                     </div>
                 </div>
             </div>
