--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                                     <h6 class="subtitle">
                                         Cybersecurity Engineer (Intern)
                                     </h6>
-                                    <p class="disc">Performed Reconnaissance, Vulnerability Assessment, Data Breach Analysis and OWASP Mapping</p>
+                                    <p class="disc">Performed Reconnaissance, Vulnerability Assessment,
+                                        Data Breach Analysis and OWASP Mapping</p>
                                 </div>
                             </div>
                             <div class="experience-right">
@@ -263,7 +264,8 @@
                                 <div class="experience-center">
                                     <span class="date">2025-Present</span>
                                     <h4 class="experience-title">
-                                        B.Tech CSE in Cloud Technology & Information Security
+                                        B.Tech CSE in Cloud Technology
+                                        & Information Security
                                     </h4>
                                     <h6 class="subtitle">
                                         Sandip University
