--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Inbio is a personal portfolio template. You can customize all.</p>
+                <p class="discription">Welcome to my Portfolio</p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills">
@@ -225,7 +225,7 @@
                                         Cybersecurity Engineer (Intern)
                                     </h6>
                                     <p class="disc">Performed Reconnaissance, Vulnerability Assessment,
-                                        Data Breach Analysis and OWASP Mapping</p>
+                                    <p class="disc">Data Breach Analysis and OWASP Mapping</p>
                                 </div>
                             </div>
                             <div class="experience-right">
@@ -265,6 +265,8 @@
                                     <span class="date">2025-Present</span>
                                     <h4 class="experience-title">
                                         B.Tech CSE in Cloud Technology
+                                    </h4>
+                                    <h4 class="experience-title">
                                         & Information Security
                                     </h4>
                                     <h6 class="subtitle">
