--- a/index.html
+++ b/index.html
@@ -851,136 +851,6 @@
         </div>
         <!-- End Resume Area -->
 
-        <!-- Start Portfolio Area -->
-        <div id="portfolio" class="rn-portfolio-area portfolio-style-three rn-section-gap section-separator">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true" class="section-title text-center">
-                            <span class="subtitle">Visit my portfolio and keep your feedback</span>
-                            <h2 class="title">My Portfolio</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt--25 mt_md--5 mt_sm--5">
-                    <div class="col-lg-12">
-                        <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="200" data-aos-once="true" class="portfolio-wrapper portfolio-slick-activation slick-arrow-style-one rn-slick-dot-style">
-
-                            <!-- Start Single Portfolio  -->
-                            <div class="rn-portfolio-slick">
-                                <div class="rn-portfolio" data-toggle="modal" data-target="#exampleModalCenter">
-                                    <div class="inner">
-                                        <div class="thumbnail">
-                                            <a href="javascript:void(0)">
-                                                <img src="assets/images/portfolio/portfolio-06.jpg" alt="Personal Portfolio Images">
-                                            </a>
-                                        </div>
-                                        <div class="content">
-                                            <div class="category-info">
-                                                <div class="category-list">
-                                                    <a href="javascript:void(0)">PHOTOSHOP</a>
-                                                </div>
-                                                <div class="meta">
-                                                    <span><a href="javascript:void(0)"><i class="feather-heart"></i></a>
-                                                        650</span>
-                                                </div>
-                                            </div>
-                                            <h4 class="title"><a href="javascript:void(0)">The services provide for design<i
-                                                        class="feather-arrow-up-right"></i></a></h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Portfolio  -->
-
-                            <!-- Start Single Portfolio  -->
-                            <div class="rn-portfolio-slick">
-                                <div class="rn-portfolio" data-toggle="modal" data-target="#exampleModalCenter">
-                                    <div class="inner">
-                                        <div class="thumbnail">
-                                            <a href="javascript:void(0)">
-                                                <img src="assets/images/portfolio/portfolio-05.jpg" alt="Personal Portfolio Images">
-                                            </a>
-                                        </div>
-                                        <div class="content">
-                                            <div class="category-info">
-                                                <div class="category-list">
-                                                    <a href="javascript:void(0)">Figma</a>
-                                                </div>
-                                                <div class="meta">
-                                                    <span><a href="javascript:void(0)"><i class="feather-heart"></i></a>
-                                                        650</span>
-                                                </div>
-                                            </div>
-                                            <h4 class="title"><a href="javascript:void(0)">Mobile app landing design & Services<i
-                                                        class="feather-arrow-up-right"></i></a></h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Portfolio  -->
-
-                            <!-- Start Single Portfolio  -->
-                            <div class="rn-portfolio-slick">
-                                <div class="rn-portfolio" data-toggle="modal" data-target="#exampleModalCenter">
-                                    <div class="inner">
-                                        <div class="thumbnail">
-                                            <a href="javascript:void(0)">
-                                                <img src="assets/images/portfolio/portfolio-04.jpg" alt="Personal Portfolio Images">
-                                            </a>
-                                        </div>
-                                        <div class="content">
-                                            <div class="category-info">
-                                                <div class="category-list">
-                                                    <a href="javascript:void(0)">Laravel</a>
-                                                </div>
-                                                <div class="meta">
-                                                    <span><a href="javascript:void(0)"><i class="feather-heart"></i></a>
-                                                        650</span>
-                                                </div>
-                                            </div>
-                                            <h4 class="title"><a href="javascript:void(0)">Web app Responsive design & Services<i
-                                                        class="feather-arrow-up-right"></i></a></h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Portfolio  -->
-
-                            <!-- Start Single Portfolio  -->
-                            <div class="rn-portfolio-slick">
-                                <div class="rn-portfolio" data-toggle="modal" data-target="#exampleModalCenter">
-                                    <div class="inner">
-                                        <div class="thumbnail">
-                                            <a href="javascript:void(0)">
-                                                <img src="assets/images/portfolio/portfolio-03.jpg" alt="Personal Portfolio Images">
-                                            </a>
-                                        </div>
-                                        <div class="content">
-                                            <div class="category-info">
-                                                <div class="category-list">
-                                                    <a href="javascript:void(0)">Figma</a>
-                                                </div>
-                                                <div class="meta">
-                                                    <span><a href="javascript:void(0)"><i class="feather-heart"></i></a>
-                                                        650</span>
-                                                </div>
-                                            </div>
-                                            <h4 class="title"><a href="javascript:void(0)">PHP with app landing design & Services<i
-                                                        class="feather-arrow-up-right"></i></a></h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- End Single Portfolio  -->
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End portfolio Area -->
-
         <!-- Start News Area -->
         <div class="rn-blog-area rn-section-gap section-separator" id="blog">
             <div class="container">
@@ -1882,52 +1752,23 @@
                         </ul>
                     </div>
                 </div>
+                
                 <div class="col-sl-3 col-12 mt_sm--20 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="menu-wrapper">
                         <div class="menu-title">
-                            <h6>product</h6>
+                            <h6>Links</h6>
                         </div>
                         <ul class="menu-footer">
-                            <li><a href="#">Database</a></li>
-                            <li><a href="#">Authentication</a></li>
-                            <li><a href="#">Storage</a></li>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">Pricing</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sl-3 col-12 mt_sm--20 col-lg-3 col-md-6 col-sm-6 col-12">
-                    <div class="menu-wrapper">
-                        <div class="menu-title">
-                            <h6>Resources</h6>
-                        </div>
-                        <ul class="menu-footer">
-                            <li><a href="#">Authentication</a></li>
-                            <li><a href="#">System Status</a></li>
-                            <li><a href="#">Terms of service</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">over right</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sl-3 col-12 mt_sm--20 col-lg-3 col-md-6 col-sm-6 col-12">
-                    <div class="menu-wrapper">
-                        <div class="menu-title">
-                            <h6>Developers</h6>
-                        </div>
-                        <ul class="menu-footer">
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Authentication</a></li>
-                            <li><a href="#">API Reference</a></li>
-                            <li><a href="#">Support</a></li>
-                            <li><a href="#">Open Source</a></li>
+                            <li><a href="#">Buy me a Coffee</a></li>
+                            <li><a href="#">Darkweb</a></li>
+                            <li><a href="#">Databases</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
         <div class="copyright text-center ptb--40 section-separator">
-            <p class="description">© 2021. All rights reserved by <a target="_blank" href="#">Your-Themes.</a></p>
+            <p class="description">© 2025. I can do this all day <a target="_blank" href="#">!</a></p>
         </div>
     </div>
     <!-- Rn footer area end -->
