--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true" class="section-title text-center">
-                            <span class="subtitle">7+ Years of Experience</span>
+                            <span class="subtitle">Use CV for reference</span>
                             <h2 class="title">My Resume</h2>
                         </div>
                     </div>
@@ -311,9 +311,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="experience-tab" data-toggle="tab" href="#experience" role="tab" aria-controls="experience" aria-selected="false">experience</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="interview-tab" data-toggle="tab" href="#interview" role="tab" aria-controls="interview" aria-selected="false">interview</a>
                             </li>
                         </ul>
 
