--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                         </ul>
                         <!-- End Mainmanu Nav -->
                     </nav>
+                    <div class="theme-switch-wrapper">
+                      <label class="theme-switch" for="checkbox">
+                        <input type="checkbox" id="checkbox" />
+                        <div class="slider round"></div>
+                      </label>
+                      <span class="mode-label" id="mode-text">Light</span>
+                    </div>
                     <!-- Start Header Right  -->
                     <div class="header-right">
                         <a class="rn-btn" target="_blank" href="https://github.com/yottajunaid"><span>GitHub</span></a>
