--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <li class="nav-item"><a class="nav-link smoth-animation" href="#footer">Footer</a></li>
                         </ul>
                         <!-- End Mainmanu Nav -->
-                        
+                    </nav>   
                     <!-- Start Header Right  -->
                     <div class="header-right">
                         <a class="rn-btn" target="_blank" href="https://github.com/yottajunaid"><span>GitHub</span></a>
