--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             <!-- Start Single Tab  -->
                             <div class="tab-pane fade " id="professional" role="tabpanel" aria-labelledby="professional-tab">
                                 <div class="personal-experience-inner mt--40">
-                                    <div class="row mt--40">
+                                    <div class="row mt--40 justify-content-center">
     <div class="col-lg-12">
         <div class="section-title">
             <h4 class="maintitle">Professional Skills</h4>
@@ -382,11 +382,11 @@
         <div class="skill-box-wrapper d-flex flex-wrap justify-content-start gap-3">
             <!-- Skill Box 1 -->
             <div class="skill-box">
-                <span>Python</span>
+                <span>Cyber Threat Intelligence (CTI)</span>
             </div>
             <!-- Skill Box 2 -->
             <div class="skill-box">
-                <span>Cloud Computing</span>
+                <span>Cybersecurity</span>
             </div>
             <!-- Skill Box 3 -->
             <div class="skill-box">
@@ -410,19 +410,91 @@
             </div>
             <!-- Skill Box 8 -->
             <div class="skill-box">
-                <span>REST APIs</span>
+                <span>MITRE ATT&CK&reg / TTP</span>
             </div>
             <!-- Skill Box 9 -->
             <div class="skill-box">
-                <span>SQL</span>
+                <span>Threat Analysis</span>
             </div>
             <!-- Skill Box 10 -->
             <div class="skill-box">
-                <span>Firebase</span>
+                <span>Deep & Dark Web Research and Investigation</span>
             </div>
+            <!-- Skill Box 11 -->
+            <div class="skill-box">
+                <span>Python</span>
+            </div>
+            <!-- Skill Box 12 -->
+            <div class="skill-box">
+                <span>Unix</span>
+            </div>
+            <!-- Skill Box 13 -->
+            <div class="skill-box">
+                <span>Poweshell</span>
+            </div>
+            <!-- Skill Box 14 -->
+            <div class="skill-box">
+                <span>Shell Scripting</span>
+            </div>
+            <!-- Skill Box 15 -->
+            <div class="skill-box">
+                <span>Linux System Administration</span>
+            </div>
+            <!-- Skill Box 16 -->
+            <div class="skill-box">
+                <span>Metasploit</span>
+            </div>
+            <!-- Skill Box 17 -->
+            <div class="skill-box">
+                <span>Tor</span>
+            </div>
+            <!-- Skill Box 18 -->
+            <div class="skill-box">
+                <span>Vulnerability Assessment and Penetration Testing (VAPT)</span>
+            </div>
+            <!-- Skill Box 19 -->
+            <div class="skill-box">
+                <span>Burp Suite</span>
+            </div>
+            <!-- Skill Box 20 -->
+            <div class="skill-box">
+                <span>Digital Forensics</span>
+            </div>
+            <!-- Skill Box 21 -->
+            <div class="skill-box">
+                <span>VMware</span>
+            </div>
+            <!-- Skill Box 22 -->
+            <div class="skill-box">
+                <span>Selenium</span>
+            </div>
+            <!-- Skill Box 23 -->
+            <div class="skill-box">
+                <span>Bash</span>
+            </div>
+            <!-- Skill Box 24 -->
+            <div class="skill-box">
+                <span>HTML/CSS</span>
+            </div>
+            <!-- Skill Box 25 -->
+            <div class="skill-box">
+                <span>Object-Oriented Programming (OOP)</span>
+            </div>
+            <!-- Skill Box 26 -->
+            <div class="skill-box">
+                <span>Painting</span>
+            </div>
+            
         </div>
     </div>
 </div>
+<div class="col-lg-12">
+        <div class="section-title">
+            <h4 class="maintitle">TryHackme Badge</h4>
+            <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none;'></iframe>
+        </div>
+</div>
+
 
                                 </div>
                             </div>
@@ -448,7 +520,7 @@
                                                                     <span>SECT (2025)</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span>1st in Cybersecurity</span>
+                                                                    <span>Leaderboard #1</span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">Performed Reconnaissance, Vulnerability Assessment, Data Breach Analysis and OWASP Mapping</p>
