--- a/index.html
+++ b/index.html
@@ -301,6 +301,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" id="experience-tab" data-toggle="tab" href="#experience" role="tab" aria-controls="experience" aria-selected="false">experience</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="project-tab" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="false">project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="certification-tab" data-toggle="tab" href="#certification" role="tab" aria-controls="certification" aria-selected="false">certification</a>
+                            </li>
                         </ul>
 
                         <!-- Start Tab Content Wrapper  -->
@@ -525,6 +531,114 @@
                                 </div>
                             </div>
                             <!-- End Single Tab  -->
+
+                            <!-- Start Single Tab  -->
+                            <div class="tab-pane show active fade single-tab-area" id="project" role="tabpanel" aria-labelledby="project-tab">
+                                <div class="personal-experience-inner mt--40">
+                                    <div class="row justify-content-center">
+                                        <!-- Start Skill List Area  -->
+                                        <div class="col-lg-6 col-md-8 col-10">
+                                            <div class="content">
+                                                <h4 class="maintitle">Projects</h4>
+                                                <div class="experience-list">
+
+                                                    <!-- Start Single List  -->
+                                                    <div class="resume-single-list">
+                                                        <div class="inner">
+                                                            <div class="heading">
+                                                                <div class="title">
+                                                                    <h4> Reconnaissance, Vulnerability Assessment, <br>Data Breach Analysis and <br>OWASP Mapping Report</h4>
+                                                                    <span>SECT (2025)</span>
+                                                                </div>
+                                                                <div class="date-of-time">
+                                                                    <span>9.1/10</span>
+                                                                </div>
+                                                            </div>
+                                                            <p class="description">Currently Pursuing B.Tech in Computer science with specialization in Cloud Technology and Information security, Learning Cloud Architecture and Practicing Ethical Hacking</p>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End Single List  -->
+
+                                                    <!-- Start Single List  -->
+                                                    <div class="resume-single-list">
+                                                        <div class="inner">
+                                                            <div class="heading">
+                                                                <div class="title">
+                                                                    <h4> 10 + 2 (ICSE)</h4>
+                                                                    <span>SDA High School (2008 - 2022)</span>
+                                                                </div>
+                                                                <div class="date-of-time">
+                                                                    <span>81%</span>
+                                                                </div>
+                                                            </div>
+                                                            <p class="description">Most precious and amazing time of my life</p>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End Single List  -->
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- End Skill List Area  -->
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Single Tab  -->
+
+                            <!-- Start Single Tab  -->
+                            <div class="tab-pane show active fade single-tab-area" id="certification" role="tabpanel" aria-labelledby="certification-tab">
+                                <div class="personal-experience-inner mt--40">
+                                    <div class="row justify-content-center">
+                                        <!-- Start Skill List Area  -->
+                                        <div class="col-lg-6 col-md-8 col-10">
+                                            <div class="content">
+                                                <span class="subtitle">2008 - 2026</span>
+                                                <h4 class="maintitle">Education Quality</h4>
+                                                <div class="experience-list">
+
+                                                    <!-- Start Single List  -->
+                                                    <div class="resume-single-list">
+                                                        <div class="inner">
+                                                            <div class="heading">
+                                                                <div class="title">
+                                                                    <h4> B.Tech CSE CTIS</h4>
+                                                                    <span>Sandip University (2022 - 2026)</span>
+                                                                </div>
+                                                                <div class="date-of-time">
+                                                                    <span>9.1/10</span>
+                                                                </div>
+                                                            </div>
+                                                            <p class="description">Currently Pursuing B.Tech in Computer science with specialization in Cloud Technology and Information security, Learning Cloud Architecture and Practicing Ethical Hacking</p>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End Single List  -->
+
+                                                    <!-- Start Single List  -->
+                                                    <div class="resume-single-list">
+                                                        <div class="inner">
+                                                            <div class="heading">
+                                                                <div class="title">
+                                                                    <h4> 10 + 2 (ICSE)</h4>
+                                                                    <span>SDA High School (2008 - 2022)</span>
+                                                                </div>
+                                                                <div class="date-of-time">
+                                                                    <span>81%</span>
+                                                                </div>
+                                                            </div>
+                                                            <p class="description">Most precious and amazing time of my life</p>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End Single List  -->
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- End Skill List Area  -->
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Single Tab  -->
+                            
                         </div>
                     </div>
                 </div>
