--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                             <!-- End Single Tab  -->
 
                             <!-- Start Single Tab  -->
-                            <div class="tab-pane show active fade single-tab-area" id="project" role="tabpanel" aria-labelledby="project-tab">
+                            <div class="tab-pane fade single-tab-area" id="project" role="tabpanel" aria-labelledby="project-tab">
                                 <div class="personal-experience-inner mt--40">
                                     <div class="row justify-content-center">
                                         <!-- Start Skill List Area  -->
@@ -691,7 +691,7 @@
                             <!-- End Single Tab  -->
 
                             <!-- Start Single Tab  -->
-                            <div class="tab-pane show active fade single-tab-area" id="certification" role="tabpanel" aria-labelledby="certification-tab">
+                            <div class="tab-pane fade single-tab-area" id="certification" role="tabpanel" aria-labelledby="certification-tab">
                                 <div class="personal-experience-inner mt--40">
                                     <div class="row justify-content-center">
                                         <!-- Start Skill List Area  -->
@@ -712,10 +712,10 @@
                                                                     <span><a href="https://www.ude.my/UC-01f36047-7d63-4b78-a103-9090f7187999">link</a></span>
                                                                 </div>
                                                             </div>
-                                                            <p class="description">• Acquired expertise in procedural programming paradigms and associated logical concepts, enhancing capabilities. 
-• Mastered fundamental Python syntax, proficiently utilizing control flow, loops, functions, and data structures. 
-• Mastered various frameworks like Selenium, Pandas, Django, Flask, NumPy, and Tkinter. 
-• Made many real-time projects during the sessions. </p>
+                                                            <p class="description">• Acquired expertise in procedural programming paradigms and associated logical concepts, enhancing capabilities.<br> 
+• Mastered fundamental Python syntax, proficiently utilizing control flow, loops, functions, and data structures.<br> 
+• Mastered various frameworks like Selenium, Pandas, Django, Flask, NumPy, and Tkinter.<br> 
+• Made many real-time projects during the sessions.</p>
                                                         </div>
                                                     </div>
                                                     <!-- End Single List  -->
@@ -732,8 +732,8 @@
                                                                     <span><a href="https://www.ude.my/UC-605b65e8-abcb-4a99-8d59-423af436f984">link</a></span>
                                                                 </div>
                                                             </div>
-                                                            <p class="description">• Acquired expertise in digital forensics, evidence collection and preparation. 
-• Learned various fundamentals like disk and file analysis, storage acquisitions, Linux filesystems, network forensics and browser forensics.  </p>
+                                                            <p class="description">• Acquired expertise in digital forensics, evidence collection and preparation.<br> 
+• Learned various fundamentals like disk and file analysis, storage acquisitions, Linux filesystems, network forensics and browser forensics.</p>
                                                         </div>
                                                     </div>
                                                     <!-- End Single List  -->
@@ -750,8 +750,8 @@
                                                                     <span><a href="https://www.udemy.com/certificate/UC-51dcf3c5-623c-424a-8350-16544cd0e4f7/">link</a></span>
                                                                 </div>
                                                             </div>
-                                                            <p class="description">• Acquired expertise in Penetration testing & Bug Bounty Hunting using various tools and frameworks. 
-• Mastered web application testing using Burp Suite, by performing various simulations of attacks.
+                                                            <p class="description">• Acquired expertise in Penetration testing & Bug Bounty Hunting using various tools and frameworks.<br> 
+• Mastered web application testing using Burp Suite, by performing various simulations of attacks.<br>
 • Learned the OWASP top 10 and its security standards.</p>
                                                         </div>
                                                     </div>
@@ -769,7 +769,7 @@
                             <!-- End Single Tab  -->
 
                                                         <!-- Start Single Tab  -->
-                            <div class="tab-pane fade " id="others" role="tabpanel" aria-labelledby="others-tab">
+                            <div class="tab-pane fade single-tab-area" id="others" role="tabpanel" aria-labelledby="others-tab">
                                 <div class="personal-experience-inner mt--40">
                                     <div class="row mt--40 justify-content-center">
     <div class="col-lg-12">
